--- a/index.html
+++ b/index.html
@@ -6,7 +6,32 @@
    <link rel="stylesheet" href="css/style.css">
    <title>Document</title>
 </head>
+
 <body>
    
+   <!-- Sezione Header  -->
+   <header>
+      <div class="top">
+         <div class="container sup">
+            <div id="logo">
+               <img src="img/logo.svg" alt="logo">
+            </div>
+            <div class="central">
+               <nav class="navigation">
+                  <ul>
+                     <li><a href="#">Scarica</a></li>
+                     <li><a href="#">Perchè Discord</a></li>
+                     <li><a href="#">Nitro</a></li>
+                     <li><a href="#">Sicurezza</a></li>
+                     <li><a href="#">Assistenza</a></li>
+                  </ul>
+               </nav>
+            </div>
+            <div class="login">
+               <button><a href="">Accedi</a></button>
+            </div>
+         </div>
+      </div>
+   </header>
 </body>
 </html>
