create header bottom

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
    
    <!-- Sezione Header  -->
    <header>
-      <div class="top">
+
+      <!-- Header top  -->
+      <div class="header-top">
          <div class="container sup">
             <div id="logo">
                <img src="img/logo.svg" alt="logo">
@@ -28,7 +30,19 @@
                </nav>
             </div>
             <div class="login">
-               <button><a href="">Accedi</a></button>
+               <div class="button-small">
+                  <a href="#">Accedi</a>
+               </div>
+            </div>
+         </div>
+      </div>
+
+      <!-- Header bottom  -->
+      <div class="header-bottom">
+         <div class="container">
+            <div class="title-header">
+               <h1>Il tuo posto per parlare</h1>
+               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, dolorum officia. Quo debitis iste, nesciunt sapiente, placeat facere nihil excepturi, neque dolore minus perspiciatis ullam minima porro temporibus nulla assumenda.</p>
             </div>
          </div>
       </div>
