create all of header

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
             <div class="title-header">
                <h1>Il tuo posto per parlare</h1>
                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, dolorum officia. Quo debitis iste, nesciunt sapiente, placeat facere nihil excepturi, neque dolore minus perspiciatis ullam minima porro temporibus nulla assumenda.</p>
+               <div class="button-big btn-light">
+                  <a href="#"> &#8595; Scarica per Mac </a>
+               </div>
+               <div class="button-big btn-dark">
+                  <a href="#">Apri Discord nel tuo browser</a>
+               </div>
             </div>
          </div>
       </div>
