--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <!-- Header top  -->
       <div class="header-top">
-         <div class="container sup">
+         <div class="container">
             <div id="logo">
                <img src="img/logo.svg" alt="logo">
             </div>
