create first section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
    
    <!-- Sezione Header  -->
    <header>
-
       <!-- Header top  -->
       <div class="header-top">
          <div class="container">
@@ -53,5 +52,21 @@
          </div>
       </div>
    </header>
+
+   <main>
+
+      <div class="container">
+         <!-- Prima Sezione del main  -->
+         <section class="img-left">
+            <div class="immage-left">
+               <img src="img/item1.svg" alt="immage">
+            </div>
+            <div class="text-right">
+               <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, placeat! Animi, praesentium ad? Expedita odio natus deserunt voluptatum! Ab totam laboriosam neque. Laborum, accusantium? Ipsa, itaque voluptate. Soluta, doloremque quae.</p>
+            </div>
+         </section>
+      </div>
+   </main>
 </body>
 </html>
