fix first section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <div class="container">
          <!-- Prima Sezione del main  -->
-         <section class="img-left">
+         <section class="img-left .clearfix">
             <div class="immage-left">
                <img src="img/item1.svg" alt="immage">
             </div>
