--- a/index.html
+++ b/index.html
@@ -56,10 +56,32 @@
    <main>
 
       <div class="container">
-         <!-- Prima Sezione del main  -->
+         <!-- First section of main  -->
          <section class="img-left .clearfix">
             <div class="immage-left">
                <img src="img/item1.svg" alt="immage">
+            </div>
+            <div class="text-right">
+               <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, placeat! Animi, praesentium ad? Expedita odio natus deserunt voluptatum! Ab totam laboriosam neque. Laborum, accusantium? Ipsa, itaque voluptate. Soluta, doloremque quae.</p>
+            </div>
+         </section>
+
+         <!-- Second section of main  -->
+         <section class="img-right .clearfix">
+            <div class="text-left">
+               <h2>Dove trovarsi è facile</h2>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, placeat! Animi, praesentium ad? Expedita odio natus deserunt voluptatum! Ab totam laboriosam neque. Laborum, accusantium? Ipsa, itaque voluptate. Soluta, doloremque quae.</p>
+            </div>
+            <div class="immage-right">
+               <img src="img/item2.svg" alt="immage">
+            </div>
+         </section>
+
+         <!-- Third section of main  -->
+         <section class="img-left .clearfix">
+            <div class="immage-left">
+               <img src="img/item3.svg" alt="immage">
             </div>
             <div class="text-right">
                <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
