create final part of main

--- a/index.html
+++ b/index.html
@@ -88,6 +88,31 @@
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, placeat! Animi, praesentium ad? Expedita odio natus deserunt voluptatum! Ab totam laboriosam neque. Laborum, accusantium? Ipsa, itaque voluptate. Soluta, doloremque quae.</p>
             </div>
          </section>
+
+         <!-- Fourth section of main  -->
+         <section class="center">
+               <div class="text-center">
+                  <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, harum quia! Sint laborum in non tempora corrupti vitae delectus natus, soluta est, reiciendis exercitationem aborum in non tempora corrupti vitae delectus natus aborum in non tempora.</p>
+                  <div class="immage-center">
+                     <img src="img/item4-big.svg" alt="">
+                  </div>
+               </div>
+         </section>
+
+         <div class="main-footer">
+            <div class="question">
+               <h3>Pronto a iniziare la tua avventura?</h3>
+            </div>
+            <div class="btn-purple">
+               <a href="#">&#8595; Scarica per Mac</a> 
+            </div>
+         </div>
+
+          <!-- Section Footer  -->
+          <footer>
+             
+          </footer>
       </div>
    </main>
 </body>
